# standard-cosmwasm-beaker

./: Beaker.toml  Cargo.toml  README.md  console.sh  deploy.sh  test
contracts/nft/: Cargo.toml  project.json
contracts/nft/examples/: schema.rs
contracts/nft/schema/nft/: query_msg.json
contracts/nft/src/: contract_tests.rs  msg.rs  query.rs
contracts/token/: Cargo.toml  project.json
contracts/token/examples/: schema.rs
contracts/tokenfactory/: Cargo.toml  project.json
contracts/tokenfactory/src/: contract.rs
contracts/vault/: Cargo.toml  README.md  project.json
contracts/vault/examples/: schema.rs
contracts/vault/schema/vault/: execute_msg.json  get_balances_response.json  get_state_response.json  instantiate_msg.json  query_msg.json  state.json
contracts/vault/src/: contract.rs  error.rs  helpers.rs  integration_tests.rs  lib.rs  msg.rs  state.rs  tests.rs
contracts/vault/src/_contract/: execute.rs  mod.rs  query.rs
contracts/vault_manager/: Cargo.toml  README.md  project.json
contracts/vault_manager/examples/: schema.rs
contracts/vault_manager/schema/vault_manager/: config.json  execute_msg.json  get_config_response.json  get_vault_config_response.json  query_msg.json  reserve.json  vault_config.json
contracts/vault_manager/src/: contract.rs  error.rs  helpers.rs  lib.rs  msg.rs  state.rs
contracts/vault_manager/src/_contract/: execute.rs  instantiate.rs  mod.rs  query.rs  test.rs
contracts/vault_manager/src/tests/: integration_tests.rs  mod.rs
frontend/: package.json
ts/sdk/: README.md  package.json  typedoc.json
(+12 files in other folders)
