[workspace]

members = [
    "contracts/vault",
    "contracts/vault_manager",
    "contracts/nft",
    "contracts/token",
    "contracts/tokenfactory",
    "packages/*"
]


[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = true
panic = 'abort'
rpath = false
